# ahmed-engineering-erp

./: .TASKS_PLAN.md  .cursorrules  .dockerignore  .env.example  .gitignore  CRITIQUE.md  DB_SCHEMA.md  Dockerfile  ENGINEERING_BUSINESS_RULES.md  ENGINEERING_ROADMAP.md  FORENSIC_AUDIT_REPORT.md  GITHUB_ACTIONS_SETUP.md  HANDOFF.md  PROJECT_MAP.md  README.md  SYSTEM_STATE.md  ai_system_instructions.txt  architecture_blueprint.md  brand_identity.json  deploy-to-hf.sh  engineering.db  main.py  my_project.txt  pyproject.toml  temp_readme.txt  verify.py
.ai/: AGENTS_ROSTER.md  AGENT_0_MAESTRO.md  AGENT_ACTIVE_STATE.md  AGENT_VACCINE.md  ENGINEERING_AUDIT.md  EXECUTABLE_DNA_SPEC.md  GAP_ANALYSIS.md  GEMINI_TREASURES.md  HANDOFF.md  ROADMAP.md  SYSTEM_DNA.md
.ai/protocols/: PROMPT_AGENT_H.md  PROMPT_AGENT_I.md  PROMPT_GENESIS.md  PROMPT_INIT.md  PROMPT_SESSION_CLOSE.md  PROMPT_SURGICAL.md
.ai/templates/: SYSTEM_DNA_TEMPLATE.md
.github/workflows/: deploy-docker-to-hf.yml  deploy-hf-space.yml  deploy-stable.yml
backend/: .env  .env.example  alembic.ini  engineering.db  requirements.txt  run.py  seed.py  seed_comprehensive.py  seed_demo.py  start_and_register.py
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py  upload.py
doc/: DECISION_LOG.md
docs/: ANCHORED_SUMMARY.md  DECISION_LOG.md  GITHUB_ACTIONS_SETUP.md  HANDOFF.md  PLAN.md  PROJECT_MAP.md  TASKS_PLAN.md  ai_system_instructions.txt
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
modules/: __init__.py
(+307 files in other folders)
